<resources xmlns:tools="http://schemas.android.com/tools">
    <!-- This is the app's name, translators please do not translate and put in the same text as English version. Developers can consider putting in their own translation, this string must be changed before publishing -->
    <string name="app_name" translatable="false">BLACKPINK STICKERS</string>
    <!-- Content description for the sticker pack tray image -->
    <string name="tray_image_content_description">Sticker Pack Tray Image</string>
    <!-- the title of info button in the menu that takes the user to more information about that pack showing publisher website and so on -->
    <string name="more_info_button">More info about sticker pack</string>
    <!-- Text to be shown on the button that user can click to add the sticker pack to WhatsApp -->
    <string name="add_to_whatsapp">Add to WhatsApp</string>
    <!-- Content Description for the plus button shown on sticker pack list, that allows user to add sticker pack to WhatsApp -->
    <string name="add_button_content_description">Add sticker pack to WhatsApp</string>
    <!-- Title of the sticker pack list activity page in case the app contains multiple sticker packs, the singular string will be used when there is only one pack in the app -->
    <plurals name="title_activity_sticker_packs_list">
        <item quantity="one">Sticker Pack</item>
        <item quantity="other">Sticker Packs</item>
    </plurals>
    <!-- Title of the sticker pack page when there are multiple sticker packs in the app -->
    <string name="title_activity_sticker_pack_details_multiple_pack">Sticker details</string>
    <!-- Title of the sticker pack info page which displays the webpage, email and privacy policy of the sticker pack -->
    <string name="title_activity_sticker_pack_info">Info</string>
    <!-- Text of button that allows user to click to go to the webpage of the publisher -->
    <string name="view_webpage">View webpage</string>
    <!-- Text of button that allows user to click to send an email -->
    <string name="send_email">Send email</string>
    <!-- Text of button that allows user to click to go to the privacy policy website -->
    <string name="privacy_policy">Privacy policy</string>
    <!-- Text of button that allows user to click to go to the license agreement website -->
    <string name="license_agreement">License agreement</string>
    <!-- Text next to the tray icon that indicates the tray icon -->
    <string name="info_screen_tray_icon">Tray icon</string>
    <!-- Text shown to the user instead of Add to WhatsApp button if the pack is already added to WhatsApp -->
    <string name="details_pack_already_added">Sticker pack added to WhatsApp</string>
    <!-- Title in the intent chooser that shows when user has multiple email client installed -->
    <string name="info_send_email_to_prompt">Send email with</string>
    <!-- Message to show in a dialog when user fails to add sticker pack -->
    <string name="add_pack_fail_prompt_update_whatsapp">Sticker pack not added. If you\'d like to add it, make sure you update to the latest version of WhatsApp.</string>
    <!-- Text in dialog button when a user has an old version of WhatsApp that prevents them from adding the sticker pack, clicking on it will take user to play store -->
    <string name="add_pack_fail_prompt_update_play_link">Update</string>
    <!-- Toast text when we could not take user to play store because they don't have Google Play app installed -->
    <string name="cannot_find_play_store">Google Play is not installed on the device.</string>
    <!-- Content description indicating the sticker pack is an animated pack -->
    <string name="sticker_pack_animation_indicator" tools:ignore="MissingTranslation">Animated sticker pack</string>
    <!-- text we display at the end of sticker pack details page showing that users can tap sticker to see bigger version -->
    <string name="sticker_pack_details_tap_to_preview" tools:ignore="MissingTranslation">Tap to preview sticker</string>
</resources>
